--- a/src/style.css
+++ b/src/style.css
@@ -819,8 +819,16 @@ video {
   width: 470px;
 }
 
+.place-content-center {
+  place-content: center;
+}
+
 .items-center {
   align-items: center;
+}
+
+.items-stretch {
+  align-items: stretch;
 }
 
 .justify-end {
@@ -885,6 +893,10 @@ video {
 
 .p-1 {
   padding: 0.25rem;
+}
+
+.p-\[100px\] {
+  padding: 100px;
 }
 
 .pt-\[\] {
