--- a/src/style.css
+++ b/src/style.css
@@ -1255,6 +1255,14 @@ video {
   width: 12.01px;
 }
 
+.w-\[22\] {
+  width: 22;
+}
+
+.w-\[22\.01p\] {
+  width: 22.01p;
+}
+
 .grid-cols-6 {
   grid-template-columns: repeat(6, minmax(0, 1fr));
 }
@@ -1333,6 +1341,10 @@ video {
 
 .rounded-\[5px\] {
   border-radius: 5px;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border {
@@ -1653,6 +1665,18 @@ video {
   padding-left: -30px;
 }
 
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+.pb-\[2\] {
+  padding-bottom: 2;
+}
+
+.pb-\[20px\] {
+  padding-bottom: 20px;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1707,6 +1731,10 @@ video {
 
 .font-\[600\] {
   font-weight: 600;
+}
+
+.font-\[600px\] {
+  font-weight: 600px;
 }
 
 .leading-10 {
@@ -1784,6 +1812,11 @@ video {
 
 .text-\[16\] {
   color: 16;
+}
+
+.text-\[\#737373\] {
+  --tw-text-opacity: 1;
+  color: rgb(115 115 115 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus {
