add marketer page

--- a/src/style.css
+++ b/src/style.css
@@ -1244,6 +1244,14 @@ video {
   height: 52px;
 }
 
+.h-\[526\] {
+  height: 526;
+}
+
+.h-\[526px\] {
+  height: 526px;
+}
+
 .w-\[1\2c 050px\] {
   width: 1,050px;
 }
